# impcloud

./: .gitignore  .project  Gemfile  README.rdoc
app/assets/stylesheets/: comments.scss
app/controllers/: comments_controller.rb
app/views/comments/: index.html.erb  register.html.erb  show.html.erb
app/views/layouts/: application.html.erb
config/: application.rb  database.yml  routes.rb  secrets.yml
config/environments/: production.rb
config/initializers/: assets.rb  session_store.rb
db/: schema.rb
db/migrate/: 20150202003436_create_words.rb
okura-dir/: test.rb
okura-dir/mecab-naist-jdic-0.6.3b-20111013/: Makefile.am  Makefile.in  configure  configure.in
test/controllers/: comments_controller_test.rb
test/fixtures/: words.yml
